--- a/Aza/xr_3da/XR_3DA.vcproj
+++ b/Aza/xr_3da/XR_3DA.vcproj
@@ -33,7 +33,7 @@
 				PreprocessorDefinitions="_DEBUG,DEBUG,WIN32,_WINDOWS,ENGINE_BUILD,SECURE_GAMEDATA"
 				StringPooling="FALSE"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
@@ -120,7 +120,7 @@
 				AdditionalIncludeDirectories="scripting\,.."
 				PreprocessorDefinitions="DEBUG,MIXED,WIN32,NDEBUG,_WINDOWS,ENGINE_BUILD"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
