--- a/xrNetServer/xrNetServer.vcproj
+++ b/xrNetServer/xrNetServer.vcproj
@@ -121,7 +121,7 @@
 				AdditionalIncludeDirectories=".."
 				PreprocessorDefinitions="MIXED,WIN32;NDEBUG;_WINDOWS;XR_NETSERVER_EXPORTS"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
@@ -198,7 +198,7 @@
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;XR_NETSERVER_EXPORTS"
 				StringPooling="FALSE"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
