--- a/xrODE/contrib/msvc7/ode_default/default.vcproj
+++ b/xrODE/contrib/msvc7/ode_default/default.vcproj
@@ -28,7 +28,9 @@
 				AdditionalIncludeDirectories="../../../include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL;MSVC;dSINGLE"
 				MinimalRebuild="TRUE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
+				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				ProgramDataBaseFileName="$(OutDir)/$(TargetName).pdb"
@@ -191,7 +193,7 @@
 				AdditionalIncludeDirectories="../../../include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;dSINGLE;MSVC;dNODEBUG"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
