--- a/xrXMLParser/xrXMLParser.vcproj
+++ b/xrXMLParser/xrXMLParser.vcproj
@@ -120,7 +120,7 @@
 				AdditionalIncludeDirectories=".."
 				PreprocessorDefinitions="MIXED,NDEBUG;WIN32;_WINDOWS;XRXMLPARSER_EXPORTS"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
@@ -197,7 +197,7 @@
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;XRXMLPARSER_EXPORTS"
 				StringPooling="FALSE"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
