--- a/xrLUA/xrLUA.vcproj
+++ b/xrLUA/xrLUA.vcproj
@@ -26,8 +26,9 @@
 				AdditionalIncludeDirectories="include\"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XRLUA_EXPORTS;LUABIND_BUILDING"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
+				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
 				StructMemberAlignment="0"
 				RuntimeTypeInfo="TRUE"
@@ -157,7 +158,7 @@
 				AdditionalIncludeDirectories="include\"
 				PreprocessorDefinitions="MIXED,WIN32;NDEBUG;_WINDOWS;_USRDLL;XRLUA_EXPORTS;LUABIND_BUILDING"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				StructMemberAlignment="0"
 				BufferSecurityCheck="FALSE"
