--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -32,7 +32,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;DEBUG;_WINDOWS;_USRDLL;XRGAME_EXPORTS;dSINGLE;MSVC"
 				StringPooling="FALSE"
 				MinimalRebuild="TRUE"
-				ExceptionHandling="TRUE"
+				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="3"
@@ -119,7 +119,7 @@
 				OptimizeForProcessor="3"
 				PreprocessorDefinitions="DEBUG,MIXED,WIN32;NDEBUG;_WINDOWS;_USRDLL;XRGAME_EXPORTS;dSINGLE;MSVC"
 				StringPooling="TRUE"
-				ExceptionHandling="TRUE"
+				ExceptionHandling="FALSE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="FALSE"
@@ -4856,6 +4856,19 @@
 						</File>
 						<File
 							RelativePath=".\console_registrator_script.cpp">
+						</File>
+					</Filter>
+					<Filter
+						Name="BaseClientClasses"
+						Filter="">
+						<File
+							RelativePath=".\base_client_classes.h">
+						</File>
+						<File
+							RelativePath=".\base_client_classes_script.cpp">
+						</File>
+						<File
+							RelativePath=".\base_client_classes_wrappers.h">
 						</File>
 					</Filter>
 				</Filter>
