--- a/xrSE_Factory/xrSE_Factory.vcproj
+++ b/xrSE_Factory/xrSE_Factory.vcproj
@@ -28,7 +28,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;DEBUG;_WINDOWS;_USRDLL;XRSE_FACTORY_EXPORTS;MSVC"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="FALSE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="3"
@@ -103,7 +103,7 @@
 				PreprocessorDefinitions="DEBUG,MIXED,WIN32;NDEBUG;_WINDOWS;_USRDLL;XRSE_FACTORY_EXPORTS;dSINGLE;MSVC"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="2"
 				StructMemberAlignment="0"
