--- a/xrAI/xrAI.vcproj
+++ b/xrAI/xrAI.vcproj
@@ -26,7 +26,7 @@
 				Optimization="0"
 				OptimizeForProcessor="0"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,DEBUG,AI_COMPILER"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				StructMemberAlignment="0"
@@ -200,7 +200,7 @@
 				OptimizeForWindowsApplication="FALSE"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,AI_COMPILER"
 				StringPooling="TRUE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="TRUE"
 				RuntimeLibrary="2"
 				StructMemberAlignment="0"
 				BufferSecurityCheck="FALSE"
