--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -2797,6 +2797,20 @@
 								RelativePath=".\ai\Monsters\States\monster_state_hitted_moveout_inline.h">
 							</File>
 						</Filter>
+						<Filter
+							Name="Steal"
+							Filter="">
+							<File
+								RelativePath=".\ai\Monsters\States\monster_state_steal.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\States\monster_state_steal_inline.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="Hunt"
+							Filter="">
+						</Filter>
 					</Filter>
 				</Filter>
 				<Filter
@@ -3066,6 +3080,28 @@
 							</File>
 							<File
 								RelativePath=".\ai\Monsters\Chimera\chimera_state_threaten_walk_inline.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="state hunting"
+							Filter="">
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting_come_out.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting_come_out_inline.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting_inline.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting_move_to_cover.h">
+							</File>
+							<File
+								RelativePath=".\ai\Monsters\Chimera\chimera_state_hunting_move_to_cover_inline.h">
 							</File>
 						</Filter>
 					</Filter>
